--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     ]
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^1.0.14"
+    "aws-iot-device-sdk": "^1.0.14",
+    "debug": "^2.6.0",
+    "i": "^0.3.5"
   },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.2.1",
