--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "eslint ."
   },
   "keywords": [
-    "hubber",
     "echohub",
-    "iot"
+    "hubber",
+    "iot",
+    "plugin"
   ],
   "author": "John Ferlito <johnf@inodes.org> (http://inodes.org)",
   "license": "ISC",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-latest": "^6.22.0",
-    "eslint": "^3.14.0",
+    "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
