--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "John Ferlito <johnf@inodes.org> (http://inodes.org)",
   "bugs": {
-    "url": "https://github.com/johnf/hubber-iot/issues"
+    "url": "https://github.com/echohubio/hubber-iot/issues"
   },
   "dependencies": {
     "aws-iot-device-sdk": "^1.0.14",
@@ -22,7 +22,7 @@
     "webpack": "^1.14.0",
     "webpack-node-externals": "^1.5.4"
   },
-  "homepage": "https://github.com/johnf/hubber-iot#readme",
+  "homepage": "https://github.com/echohubio/hubber-iot#readme",
   "keywords": [
     "echohub",
     "hubber",
@@ -39,12 +39,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "johnf/hubber-iot"
+    "url": "echohubio/hubber-iot"
   },
   "scripts": {
     "build": "webpack -p",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postversion": "git push",
+    "prepublish": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "vi CHANGELOG.md && git add CHANGELOG.md"
   },
   "version": "1.0.1"
 }
