--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
     "url": "https://github.com/echohubio/hubber-iot/issues"
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^1.0.14",
-    "electron-log": "^1.3.0"
+    "aws-iot-device-sdk": "^2.0.1",
+    "electron-log": "^2.2.7"
   },
   "description": "IoT module for Hubber",
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-latest": "^6.22.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^3.19.0 || ^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "json-loader": "^0.5.4",
-    "webpack": "^1.14.0",
+    "webpack": "^3.5.4",
     "webpack-node-externals": "^1.5.4"
   },
   "homepage": "https://github.com/echohubio/hubber-iot#readme",
