--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.19.0 || ^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
@@ -45,7 +46,7 @@
     "build": "webpack -p",
     "lint": "eslint .",
     "postversion": "git push",
-    "prepublish": "npm run build",
+    "prepublish": "yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "version": "vi CHANGELOG.md && git add CHANGELOG.md"
   },
