Don't register multiple times

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "build": "webpack -p",
+    "watch": "webpack --watch",
     "lint": "eslint .",
     "postversion": "git push",
     "prepublish": "yarn run build",
