--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.19.0 || ^4.3.0",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-eslint-comments": "^2.0.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
     "json-loader": "^0.5.4",
     "webpack": "^3.5.4",
