--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Dependency directory
-# https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
-
-# Debug log from npm
-npm-debug.log
-
-dist/*
+dist
+.monitor.json
