--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   },
   "dependencies": {
     "aws-iot-device-sdk": "^2.0.1",
-    "electron-log": "^2.2.7"
+    "electron-log": "^2.2.13"
   },
   "description": "IoT module for Hubber",
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-latest": "^6.22.0",
-    "eslint": "^3.19.0 || ^4.3.0",
-    "eslint-config-airbnb": "^16.1.0",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-eslint-comments": "^2.0.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
     "json-loader": "^0.5.4",
     "webpack": "^3.5.4",
+    "webpack-monitor": "^1.0.14",
     "webpack-node-externals": "^1.5.4"
   },
   "homepage": "https://github.com/echohubio/hubber-iot#readme",
@@ -44,8 +44,7 @@
     "url": "echohubio/hubber-iot"
   },
   "scripts": {
-    "build": "webpack -p",
-    "watch": "webpack --watch",
+    "build": "webpack",
     "lint": "eslint .",
     "postversion": "git push",
     "prepublish": "yarn run build",
