--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "compact": false,
-  "presets": ["latest"],
-  "plugins": ["add-module-exports"]
+  "presets": [
+    ["env", {
+      "targets": { "node": "6.10" }
+    }]
+  ],
+  "plugins": [
+    "transform-runtime",
+    "transform-object-rest-spread"
+  ]
 }
